--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,6 +21,7 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "elliptic": "^6.4.1",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
     "pubnub": "^4.21.6",
