--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hex-to-binary": "^1.0.1",
     "pubnub": "^4.21.6",
     "redis": "^3.0.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "uuid": "^3.3.2"
   }
 }
